@@ -33,7 +33,7 @@ import javax.xml.bind.JAXBException;
 
 import mobac.mapsources.DefaultMapSourcesManager;
 import mobac.mapsources.MapSourcesManager;
-import mobac.mapsources.mappacks.region_europe_east.FreemapSlovakiaHiking;
+import mobac.mapsources.mappacks.region_oceania.NzTopoMaps;
 import mobac.program.Logging;
 import mobac.program.ProgramInfo;
 import mobac.program.download.TileDownLoader;
@@ -60,7 +60,9 @@ public class MapSourceCapabilityDetector {
 	 */
 	public static void main(String[] args) {
 
-		Class<? extends HttpMapSource> mapSourceClass = FreemapSlovakiaHiking.class;
+		// ***************************************************************************
+		Class<? extends HttpMapSource> mapSourceClass = NzTopoMaps.class;
+		// ***************************************************************************
 
 		Logging.configureLogging();
 		ProgramInfo.initialize();
